# descriptor-manager

./: CMakeLists.txt  README
cmake/: AddCaffe.cmake  FindCaffe.cmake
include/descriptor_manager/: config_file.h  descriptor.h  descriptor_manager.h  descriptors.h  image.h  image_file.h  network_manager.h
include/utils/: config_file.h  image.h  image_file.h
src/: CMakeLists.txt  Descriptor.cpp  config_file.cpp  descriptor_manager.cpp  image.cpp  image_file.cpp
src/descriptor_manager/: descriptor.cpp  descriptor_manager.cpp  descriptors.cpp  network_manager.cpp
src/utils/: config_file.cpp  image.cpp  image_file.cpp
tools/: CMakeLists.txt
tools/src/: change_class_in_descriptor_file.cpp  compute_descriptors.cpp  join_descriptor_file.cpp  run_classification_experiment.cpp  run_retrieval_experiment.cpp  run_retrieval_experiments_with_descriptors.cpp  split_descriptors.cpp
